--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -80,7 +80,7 @@
        h3 {
            @extend .font-text;
            font-size: 14px;
-           color: #000;
+           color: #ff9900;
        }
 
        h4 {
