--- a/public/assets/portal/css/bet-details.css
+++ b/public/assets/portal/css/bet-details.css
@@ -134,7 +134,8 @@
   background-color: #679a01; }
 
 .betslip-button.login {
-  background-color: #ff9900; }
+  background-color: #ff9900;
+  border-radius: 5px 0 0 0; }
 
 .betslip-text.tab.selected, .tab.selected.betslip-text-amount {
   font-size: 12px;
