--- a/resources/assets/sass/carousel/carousel.scss
+++ b/resources/assets/sass/carousel/carousel.scss
@@ -116,7 +116,7 @@
       width:100%;
       height:100%;
       border-radius:50%;
-      background:#f39c12;
+      background:#ff3300;
       position:relative;
       -webkit-animation:on 30s infinite;
       -moz-animation:on 30s infinite;
