--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -63,6 +63,10 @@
         .marketCount {
             width: 50px;
             border-radius: 0 5px 0 0;
+
+            i {
+                font-size: 18px;
+            }
         }
 
     }
