--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -163,7 +163,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: #f39c12;
+    background: #ff3300;
     position: relative;
     -webkit-animation: on 30s infinite;
     animation: on 30s infinite; }
@@ -414,6 +414,8 @@
     .fixtures .header .marketCount {
       width: 50px;
       border-radius: 0 5px 0 0; }
+      .fixtures .header .marketCount i {
+        font-size: 18px; }
   .fixtures .fixture {
     height: 42px;
     background-color: #2d415c; }
@@ -600,7 +602,8 @@
   background-color: #679a01; }
 
 .betslip-button.login {
-  background-color: #ff9900; }
+  background-color: #ff9900;
+  border-radius: 5px 0 0 0; }
 
 .betslip-text.tab.selected, .tab.selected.betslip-text-amount {
   font-size: 12px;
