Modificar estilos betslip #7

--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -10,9 +10,8 @@
 
 @import 'info/info';
 
-@import 'sports/fixtures.scss';
+@import 'sports/fixtures';
 @import 'sports/betslip';
 @import 'sports/markets';
 @import 'sports/liveMenu';
 @import 'sports/sportsMenu';
-
