--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -1,214 +1,245 @@
-.betslip-container {
+.betslip {
     float: left;
     color: #fff;
     width: 310px;
     text-align: center;
     margin-top: 8px;
-}
-
-.betslip-box.header {
-    height: 46px;
-    margin-bottom: 8px;
-}
-
-.betslip-tab {
-    float: left;
-    width: 50%;
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans',  sans-serif;
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-}
-
-.betslip-tab.header {
-    height: 46px;
-    line-height: 46px;
-    font-weight: bold;
-    color: #497d92;
-    background-color: #101928;
-}
-
-.betslip-tab.header.selected {
-    color: #FFF;
-    background-color: #ff3300;
-}
-
-.betslip-box.betType {
-    height: 40px;
-}
-
-.betslip-tab.betType {
-    font-size: 18px;
-    line-height: 40px;
-    color: #99ccff;
-    background-color: #1e293e;
-}
-
-.betslip-tab.corner {
-    border-radius: 5px 0 0 0;
-}
-
-.betslip-tab.betType.selected{
-    background-color: #2d415c;
-    color: #FFF;
-}
-
-.betslip-content {
-    background: #101928;
-}
-
-.betslip-box.bet, .betslip-box.event  {
-    background-color: #2d415c;
-    padding: 6px 10px;
-    margin-bottom: 4px;
-}
-
-.betslip-box.simpleFooter, .betslip-box.multiFooter {
-    padding: 10px 10px;
-}
-
-.betslip-box.row {
-    text-align: left;
-    line-height: 22px;
-    min-height: 22px;
-    margin: 5px 0;
-}
-
-.betslip-button.remove {
-    float: right;
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 12px;
-    background: none;
-    color: #497d92;
-    border: none;
-    margin-top: 5px;
-}
-
-.betslip-text {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-size: 14px;
     word-break: break-all;
-}
 
-.betslip-text-amount {
-    @extend .betslip-text;
+    .tab {
+        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-size: 18px;
+        float: left;
+        width: 50%;
+        cursor: pointer;
+        border: none;
+        background: none;
+        box-sizing: border-box;
+    }
 
-    float: right;
-    font-weight: bold;
-    color: #FFF;
-}
+    > .header {
+        height: 46px;
+        margin-bottom: 8px;
+        background-color: #101928;
 
+        .tab {
+            line-height: 38px;
+            font-weight: bold;
+            color: #497d92;
 
-.betslip-text.profit.white {
-    color: #FFF;
-}
+            &.selected {
+                color: #FFF;
+                border: 2px solid #ff9900;
+            }
+        }
+    }
 
-.betslip-text.gameName {
-    font-size: 12px;
-    color: #99ccff;
-    line-height: 120%;
-}
+    > .content {
 
-.betslip-text.marketName {
-    font-size: 14px;
-    color: #FFF;
-}
+        .error {
+            color: #f00;
+            font-weight: bold;
+            text-align: center;
+        }
 
-.betslip-text.eventName, .betslip-text.count, .betslip-text.oddsLabel, .betslip-text.amountLabel {
-    font-weight: bold;
-    color: #FFF;
-}
+        .success {
 
-.betslip-text.odds {
-    float: right;
-    font-weight: bold;
-    color: #ffcc00;
-}
+            font-weight: bold;
+            text-align: center;
+            line-height: 50px;
+            background-color: #2d415c;
+        }
 
-.betslip-icon-loss {
-    font-size: 16px;
-    color: #ff3300;
-}
+        .header {
+            color: #99ccff;
+            height: 40px;
 
-.betslip-text.win {
-    font-size: 16px;
-    color: #99cc00;
-}
+            .tab:first-child {
+                border-radius: 5px 0 0 0;
+            }
 
-.betslip-text.amount {
-    float: right;
-    font-weight: bold;
-}
+            .tab {
+                padding-left: 15px;
+                line-height: 40px;
+                background-color: #1e293e;
 
-.betslip-text.count.amount, .betslip-text.profit.amount {
-    float: right;
-}
+                i {
+                    font-size: 14px;
 
-.betslip-text.profit {
-    font-weight: bold;
-    color: #99cc00;
-}
+                    &.fa-caret-down {
+                        font-size: 18px;
+                        color: #ff9900;
+                    }
+                }
 
-.betslip-button.submit, .betslip-button.login {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-    color: #FFF;
-    width: 100%;
-    height: 42px;
-    border: 0;
-}
+                &.selected {
+                    color: #FFF;
+                    background: #2d415c;
+                }
+            }
+        }
 
-.betslip-button.submit {
-    background-color: #679a01;
-}
+        .row {
+            text-align: left;
+            line-height: 22px;
+            min-height: 22px;
+            margin: 5px 0;
+        }
 
-.betslip-button.login {
-    background-color: #ff9900;
-    border-radius: 5px 0 0 0;
-}
+        .bets {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+            background-color: #2d415c;
+            padding: 6px 10px;
+            margin-bottom: 4px;
+            font-size: 14px;
 
-.betslip-text.tab.selected {
-    font-size: 12px;
-    color: #ff9900;
-}
+            .row {
+                .remove {
+                    float: right;
+                    font-weight: bold;
+                    font-size: 12px;
+                    line-height: 22px;
+                    margin-right: 8px;
+                    color: #497d92;
+                    cursor: pointer;
+                }
 
-.betslip-field.amount {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-weight: bold;
-    width: 50px;
-    text-align: right;
-    font-size: 12px;
-    background-color: #607d8b;
-    border: none;
-    border-radius: 4px;
-    padding: 2px 4px;
-}
+                .game {
+                    line-height: 120%;
+                    font-size: 12px;
+                    color: #99ccff;
+                }
 
-.betslip-text.error {
-    color: #f00;
-    text-align: center;
-}
-.betslip-box.noBets {
-    display: table;
-    width: 100%;
-    height: 70px;
-}
+                .amount {
+                    float: right;
 
-.betslip-text.noBets {
-    display: table-cell;
-    font-size: 12px;
-    color: #99ccff;
-    vertical-align: middle;
-}
+                    span {
+                        font-size: 14px;
+                    }
 
-.betslip-icon-tab.inactive {
-    font-size: 14px;
-    color: #99ccff;
-}
+                    input {
+                        font-weight: bold;
+                        width: 50px;
+                        text-align: right;
+                        font-size: 12px;
+                        background-color: #607d8b;
+                        border: none;
+                        border-radius: 4px;
+                        padding: 2px 4px;
+                    }
+                }
 
-.betslip-icon-tab.active {
-    font-size: 18px;
-    color: #ff9900;
+                .event {
+                    font-weight: bold;
+                    color: #FFF;
+                }
+
+                .odds {
+                    float: right;
+                    font-weight: bold;
+                    color: #ff9900;
+
+                    i {
+                        font-size: 16px;
+                        color: #99cc00;
+                    }
+                }
+
+                .profit {
+                    font-weight: bold;
+                    color: #99cc00;
+                }
+
+                .total {
+                    font-weight: bold;
+                }
+            }
+        }
+
+        .noBets {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+
+            font-size: 12px;
+            color: #99ccff;
+            padding: 23px 0;
+        }
+
+        .simpleFooter {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+
+            font-size: 14px;
+            text-align: left;
+            padding: 10px;
+            font-weight: bold;
+
+            .count {
+                font-weight: bold;
+            }
+
+            .amount {
+                float: right;
+            }
+
+            .profit {
+                color: #99cc00;
+            }
+        }
+
+        .multiFooter {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+
+            font-size: 14px;
+            text-align: left;
+            padding: 10px;
+            font-weight: bold;
+
+            .odds {
+                float: right;
+                color: #ff9900;
+            }
+
+            .amount {
+                float: right;
+                font-weight: normal;
+
+                input {
+                    font-weight: bold;
+                    width: 50px;
+                    text-align: right;
+                    font-size: 12px;
+                    background-color: #607d8b;
+                    border: none;
+                    border-radius: 4px;
+                    padding: 2px 4px;
+                }
+            }
+
+            .profit {
+                color: #99cc00;
+                font-weight: bold;
+            }
+
+        }
+
+        .footer {
+            >button {
+                font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+                font-weight: bold;
+                font-size: 18px;
+                color: #FFF;
+                width: 100%;
+                height: 42px;
+                border: 0;
+            }
+
+            .login {
+                background-color: #ff9900;
+            }
+
+            .submit {
+                background-color: #679a01;
+            }
+        }
+    }
+
 }
