--- a/resources/assets/sass/breadcrumb/breadcrumb.scss
+++ b/resources/assets/sass/breadcrumb/breadcrumb.scss
@@ -2,6 +2,7 @@
     @extend .font-title;
     font-size: 18px;
     color: #99ccff;
+    height: 46px;
     line-height: 46px;
     margin: 8px 0;
     padding: 0 15px;
