--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -10,6 +10,8 @@
 
 @import 'info/info';
 
+@import 'statistics/statistics';
+
 @import 'sports/fixtures';
 @import 'sports/betslip';
 @import 'sports/markets';
