--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -19,6 +19,11 @@
         .date {
             width: 60px;
             border-radius: 5px 0 0;
+            text-align: left;
+
+            i {
+                margin-left: 15px;
+            }
         }
 
         .game {
