--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -29,7 +29,7 @@
 
             &.selected {
                 color: #FFF;
-                border: 2px solid #ff9900;
+                background: #ff3300;
             }
         }
     }
