--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -221,7 +221,7 @@
 
         }
 
-        .footer {
+        >.footer {
             >button {
                 font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
                 font-weight: bold;
