--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -4,6 +4,15 @@
 .font-text, .info .links, .info .content, .info .content h2, .info .content h3, .info .content h4, .info .content p, .markets table, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
   font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif; }
 
+.blocker {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.2); }
+
 .selection-button {
   border: 0;
   background: none;
@@ -342,6 +351,8 @@
     color: #000;
     padding: 20px;
     min-height: 300px; }
+    .info .content a {
+      color: #3399ff; }
     .info .content h1 {
       font-size: 18px; }
     .info .content h2 {
@@ -444,7 +455,9 @@
     background-color: #2d415c; }
     .fixtures .fixture .date {
       font-size: 12px;
-      color: #99ccff; }
+      color: #99ccff;
+      text-align: left;
+      padding-left: 15px; }
     .fixtures .fixture .game {
       text-align: left;
       font-size: 14px;
@@ -634,7 +647,7 @@
     .betslip > .content .multiFooter .profit {
       color: #99cc00;
       font-weight: bold; }
-  .betslip > .content .footer > button {
+  .betslip > .content > .footer > button {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     font-weight: bold;
     font-size: 18px;
@@ -642,9 +655,9 @@
     width: 100%;
     height: 42px;
     border: 0; }
-  .betslip > .content .footer .login {
+  .betslip > .content > .footer .login {
     background-color: #ff9900; }
-  .betslip > .content .footer .submit {
+  .betslip > .content > .footer .submit {
     background-color: #679a01; }
 
 .markets-container {
@@ -769,9 +782,13 @@
     width: 30px; }
   .menuLive table .fixture {
     cursor: pointer;
-    width: 200px; }
+    width: 155px; }
     .menuLive table .fixture.selected {
       color: #ff9900; }
+  .menuLive table .matchState {
+    width: 50px;
+    text-align: right;
+    padding-right: 15px; }
 
 .sportsMenu-container {
   float: left;
