--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -55,7 +55,6 @@
                }
            }
        }
-
    }
 
    .content {
@@ -65,6 +64,10 @@
        padding: 20px;
 
        min-height: 300px;
+
+       a {
+           color: #3399ff;
+       }
 
        h1 {
            @extend .font-title;
