--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -83,6 +83,8 @@
         .date {
             font-size: 12px;
             color: #99ccff;
+            text-align: left;
+            padding-left: 15px;
         }
 
         .game {
