--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -14,6 +14,11 @@
 
 @import 'statistics/statistics';
 
+@import 'sportsMenu/sportsMenu';
+@import 'sportsMenu/regionsMenu';
+@import 'sportsMenu/competitionsMenu';
+@import 'sportsMenu/fixturesMenu';
+
 @import 'sports/fixtures';
 @import 'sports/betslip';
 @import 'sports/markets';
