--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -47,7 +47,7 @@
                 width: 30%;
                 height: 80px;
                 text-align: right;
-                padding-top: 20px;
+                padding: 20px 10px 0 0;
 
                 a {
                     margin-left: 30px;
@@ -58,7 +58,7 @@
 
         p {
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-            font-size: 12px;
+            font-size: 11px;
             color: #fff;
         }
 
