--- a/resources/assets/sass/breadcrumb/breadcrumb.scss
+++ b/resources/assets/sass/breadcrumb/breadcrumb.scss
@@ -2,9 +2,9 @@
     @extend .font-title;
     font-size: 18px;
     color: #99ccff;
-    height: 46px;
-    line-height: 46px;
-    margin: 8px 0;
+    height: 40px;
+    line-height: 40px;
+    margin: 8px 0 14px;
     padding: 0 15px;
     white-space: nowrap;
     overflow: hidden;
