--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -48,9 +48,11 @@
                    font-size: 12px;
                }
 
-
                &:hover, &.selected {
                    color: #ff9900;
+               }
+
+               &.selected {
                    font-weight: bold;
                }
            }
