--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -60,6 +60,7 @@
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
             font-size: 11px;
             color: #fff;
+            padding-right: 10px;
         }
 
         .copyright {
