--- a/resources/assets/sass/sports/sportsMenu.scss
+++ b/resources/assets/sass/sports/sportsMenu.scss
@@ -26,7 +26,7 @@
     border: none;
     background: none;
     padding: 0;
-    line-height: 46px;
+    line-height: 40px;
 
     &.selected {
         color: #FFF;
@@ -41,15 +41,15 @@
         font-size: 16px;
         background-color: #1e293e;
         padding: 0 15px;
-        line-height: 42px;
+        line-height: 40px;
         cursor: pointer;
-        color: #FFF;
+        color: #99ccff;
         border-radius: 0 5px 0 0;
 
         .expand {
             float: right;
             font-size: 14px;
-            line-height: 42px;
+            line-height: 40px;
             color: #99ccff;
 
             &.collapse {
