--- a/public/assets/portal/css/bet-details.css
+++ b/public/assets/portal/css/bet-details.css
@@ -1,159 +1,177 @@
-.betslip {
+.betslip-container {
   float: left;
   color: #fff;
   width: 310px;
   text-align: center;
-  margin-top: 8px;
+  margin-top: 8px; }
+
+.betslip-box.header {
+  height: 46px;
+  margin-bottom: 8px; }
+
+.betslip-tab {
+  float: left;
+  width: 50%;
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans',  sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  border: none; }
+
+.betslip-tab.header {
+  height: 46px;
+  line-height: 46px;
+  font-weight: bold;
+  color: #497d92;
+  background-color: #101928; }
+
+.betslip-tab.header.selected {
+  color: #FFF;
+  background-color: #ff3300; }
+
+.betslip-box.betType {
+  height: 40px; }
+
+.betslip-tab.betType {
+  font-size: 18px;
+  line-height: 40px;
+  color: #99ccff;
+  background-color: #1e293e; }
+
+.betslip-tab.corner {
+  border-radius: 5px 0 0 0; }
+
+.betslip-tab.betType.selected {
+  background-color: #2d415c;
+  color: #FFF; }
+
+.betslip-content {
+  background: #101928; }
+
+.betslip-box.bet, .betslip-box.event {
+  background-color: #2d415c;
+  padding: 6px 10px;
+  margin-bottom: 4px; }
+
+.betslip-box.simpleFooter, .betslip-box.multiFooter {
+  padding: 10px 10px; }
+
+.betslip-box.row {
+  text-align: left;
+  line-height: 22px;
+  min-height: 22px;
+  margin: 5px 0; }
+
+.betslip-button.remove {
+  float: right;
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  background: none;
+  color: #497d92;
+  border: none;
+  margin-top: 5px; }
+
+.betslip-text, .betslip-text-amount {
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+  font-size: 14px;
   word-break: break-all; }
-  .betslip .tab {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    font-size: 18px;
-    float: left;
-    width: 50%;
-    cursor: pointer;
-    border: none;
-    background: none;
-    box-sizing: border-box; }
-  .betslip > .header {
-    height: 46px;
-    margin-bottom: 8px;
-    background-color: #101928; }
-    .betslip > .header .tab {
-      line-height: 38px;
-      font-weight: bold;
-      color: #497d92; }
-      .betslip > .header .tab.selected {
-        color: #FFF;
-        background: #ff3300; }
-  .betslip > .content .error {
-    color: #f00;
-    font-weight: bold;
-    text-align: center; }
-  .betslip > .content .success {
-    font-weight: bold;
-    text-align: center;
-    line-height: 50px;
-    background-color: #2d415c; }
-  .betslip > .content .header {
-    color: #99ccff;
-    height: 40px; }
-    .betslip > .content .header .tab:first-child {
-      border-radius: 5px 0 0 0; }
-    .betslip > .content .header .tab {
-      padding-left: 15px;
-      line-height: 40px;
-      background-color: #1e293e; }
-      .betslip > .content .header .tab i {
-        font-size: 14px; }
-        .betslip > .content .header .tab i.fa-caret-down {
-          font-size: 18px;
-          color: #ff9900; }
-      .betslip > .content .header .tab.selected {
-        color: #FFF;
-        background: #2d415c; }
-  .betslip > .content .row {
-    text-align: left;
-    line-height: 22px;
-    min-height: 22px;
-    margin: 5px 0; }
-  .betslip > .content .bets {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    background-color: #2d415c;
-    padding: 6px 10px;
-    margin-bottom: 4px;
-    font-size: 14px; }
-    .betslip > .content .bets .row .remove {
-      float: right;
-      font-weight: bold;
-      font-size: 12px;
-      line-height: 22px;
-      margin-right: 8px;
-      color: #497d92;
-      cursor: pointer; }
-    .betslip > .content .bets .row .game {
-      line-height: 120%;
-      font-size: 12px;
-      color: #99ccff; }
-    .betslip > .content .bets .row .amount {
-      float: right; }
-      .betslip > .content .bets .row .amount span {
-        font-size: 14px; }
-      .betslip > .content .bets .row .amount input {
-        font-weight: bold;
-        width: 50px;
-        text-align: right;
-        font-size: 12px;
-        background-color: #607d8b;
-        border: none;
-        border-radius: 4px;
-        padding: 2px 4px; }
-    .betslip > .content .bets .row .event {
-      font-weight: bold;
-      color: #FFF; }
-    .betslip > .content .bets .row .odds {
-      float: right;
-      font-weight: bold;
-      color: #ff9900; }
-      .betslip > .content .bets .row .odds i {
-        font-size: 16px;
-        color: #99cc00; }
-    .betslip > .content .bets .row .profit {
-      font-weight: bold;
-      color: #99cc00; }
-    .betslip > .content .bets .row .total {
-      font-weight: bold; }
-  .betslip > .content .noBets {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-size: 12px;
-    color: #99ccff;
-    padding: 23px 0; }
-  .betslip > .content .simpleFooter {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-size: 14px;
-    text-align: left;
-    padding: 10px;
-    font-weight: bold; }
-    .betslip > .content .simpleFooter .count {
-      font-weight: bold; }
-    .betslip > .content .simpleFooter .amount {
-      float: right; }
-    .betslip > .content .simpleFooter .profit {
-      color: #99cc00; }
-  .betslip > .content .multiFooter {
-    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-    font-size: 14px;
-    text-align: left;
-    padding: 10px;
-    font-weight: bold; }
-    .betslip > .content .multiFooter .odds {
-      float: right;
-      color: #ff9900; }
-    .betslip > .content .multiFooter .amount {
-      float: right;
-      font-weight: normal; }
-      .betslip > .content .multiFooter .amount input {
-        font-weight: bold;
-        width: 50px;
-        text-align: right;
-        font-size: 12px;
-        background-color: #607d8b;
-        border: none;
-        border-radius: 4px;
-        padding: 2px 4px; }
-    .betslip > .content .multiFooter .profit {
-      color: #99cc00;
-      font-weight: bold; }
-  .betslip > .content > .footer > button {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-    color: #FFF;
-    width: 100%;
-    height: 42px;
-    border: 0; }
-  .betslip > .content > .footer .login {
-    background-color: #ff9900; }
-  .betslip > .content > .footer .submit {
-    background-color: #679a01; }
+
+.betslip-text-amount {
+  float: right;
+  font-weight: bold;
+  color: #FFF; }
+
+.betslip-text.profit.white, .profit.white.betslip-text-amount {
+  color: #FFF; }
+
+.betslip-text.gameName, .gameName.betslip-text-amount {
+  font-size: 12px;
+  color: #99ccff;
+  line-height: 120%; }
+
+.betslip-text.marketName, .marketName.betslip-text-amount {
+  font-size: 14px;
+  color: #FFF; }
+
+.betslip-text.eventName, .eventName.betslip-text-amount, .betslip-text.count, .count.betslip-text-amount, .betslip-text.oddsLabel, .oddsLabel.betslip-text-amount, .betslip-text.amountLabel, .amountLabel.betslip-text-amount {
+  font-weight: bold;
+  color: #FFF; }
+
+.betslip-text.odds, .odds.betslip-text-amount {
+  float: right;
+  font-weight: bold;
+  color: #ffcc00; }
+
+.betslip-icon-loss {
+  font-size: 16px;
+  color: #ff3300; }
+
+.betslip-text.win, .win.betslip-text-amount {
+  font-size: 16px;
+  color: #99cc00; }
+
+.betslip-text.amount, .amount.betslip-text-amount {
+  float: right;
+  font-weight: bold; }
+
+.betslip-text.count.amount, .count.amount.betslip-text-amount, .betslip-text.profit.amount, .profit.amount.betslip-text-amount {
+  float: right; }
+
+.betslip-text.profit, .profit.betslip-text-amount {
+  font-weight: bold;
+  color: #99cc00; }
+
+.betslip-button.submit, .betslip-button.login {
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  color: #FFF;
+  width: 100%;
+  height: 42px;
+  border: 0; }
+
+.betslip-button.submit {
+  background-color: #679a01; }
+
+.betslip-button.login {
+  background-color: #ff9900; }
+
+.betslip-text.tab.selected, .tab.selected.betslip-text-amount {
+  font-size: 12px;
+  color: #ff9900; }
+
+.betslip-field.amount {
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+  font-weight: bold;
+  width: 50px;
+  text-align: right;
+  font-size: 12px;
+  background-color: #607d8b;
+  border: none;
+  border-radius: 4px;
+  padding: 2px 4px; }
+
+.betslip-text.error, .error.betslip-text-amount {
+  color: #f00;
+  text-align: center; }
+
+.betslip-box.noBets {
+  display: table;
+  width: 100%;
+  height: 70px; }
+
+.betslip-text.noBets, .noBets.betslip-text-amount {
+  display: table-cell;
+  font-size: 12px;
+  color: #99ccff;
+  vertical-align: middle; }
+
+.betslip-icon-tab.inactive {
+  font-size: 14px;
+  color: #99ccff; }
+
+.betslip-icon-tab.active {
+  font-size: 18px;
+  color: #ff9900; }
 
 /*# sourceMappingURL=bet-details.css.map */
