--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -99,7 +99,7 @@
                     font-weight: bold;
                     font-size: 12px;
                     line-height: 22px;
-                    margin-right: 8px;
+                    margin-right: 2px;
                     color: #497d92;
                     cursor: pointer;
                 }
@@ -142,6 +142,11 @@
                     i {
                         font-size: 16px;
                         color: #99cc00;
+                    }
+
+                    &.old {
+                        text-decoration: line-through;
+                        font-weight: normal;
                     }
                 }
 
@@ -196,6 +201,11 @@
             .odds {
                 float: right;
                 color: #ff9900;
+
+                &.old {
+                    text-decoration: line-through;
+                    font-weight: normal;
+                }
             }
 
             .amount {
