--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -147,6 +147,7 @@
                     &.old {
                         text-decoration: line-through;
                         font-weight: normal;
+                        margin-right: 5px;
                     }
                 }
 
@@ -205,6 +206,7 @@
                 &.old {
                     text-decoration: line-through;
                     font-weight: normal;
+                    margin-right: 5px;
                 }
             }
 
