--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -403,6 +403,41 @@
   width: 100%;
   border: 0; }
 
+.terminalVerifier {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2000000001;
+  background-color: #101928;
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+  color: #FFF; }
+  .terminalVerifier .warning {
+    padding: 50px 100px;
+    text-align: center;
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    color: #ff3300;
+    font-size: 24px;
+    font-weight: bold; }
+  .terminalVerifier .note {
+    padding: 40px 50px;
+    text-align: center; }
+  .terminalVerifier .accept {
+    padding: 0 50px;
+    text-align: center; }
+  .terminalVerifier button {
+    text-align: center;
+    background-color: #679a01;
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    display: inline;
+    color: #FFF;
+    height: 42px;
+    width: 100px;
+    border: 0; }
+
 .sportsMenu .sport {
   font-size: 16px;
   line-height: 39px;
