--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -14,6 +14,8 @@
 
 @import 'statistics/statistics';
 
+@import 'terminalVerifier/terminalVerifier';
+
 @import 'sportsMenu/sportsMenu';
 @import 'sportsMenu/regionsMenu';
 @import 'sportsMenu/competitionsMenu';
