--- a/resources/assets/sass/sports/sportsMenu.scss
+++ b/resources/assets/sass/sports/sportsMenu.scss
@@ -38,7 +38,7 @@
 .sportsMenu-interval {
     .header {
         @extend .font-title;
-        font-size: 16px;
+        font-size: 18px;
         background-color: #1e293e;
         padding: 0 15px;
         line-height: 40px;
@@ -159,7 +159,7 @@
     /*line-height: 35px;*/
 }
 
-.sportsMenu-text.popular {
+.sportsMenu-text.popular, .sportsMenu-text.highlight {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     font-size: 18px;
 }
