--- a/resources/assets/sass/sports/sportsMenu.scss
+++ b/resources/assets/sass/sports/sportsMenu.scss
@@ -114,6 +114,10 @@
     line-height: 35px;
     height: 35px;
 }
+.sportsMenu-box-highlights-submenu:hover{
+    background-color: #FFF;
+    color: #536883;
+}
 
 .sportsMenu-box-popular {
     margin-top: 5px;
