--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -19,5 +19,10 @@
             float: right;
             color: #ff9900;
         }
+
+    }
+    .region:hover{
+        background-color: #FFF;
+        color: #2d415c;
     }
 }
