WIP: Mudar as cores de botões com o rato em cima #7

--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -9,6 +9,11 @@
         color: #FFF;
         line-height: 35px;
 
+        &:hover{
+            background-color: #FFF;
+            color: #2d415c;
+        }
+
         .count {
             float: right;
         }
