--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -27,4 +27,9 @@
             font-size: 14px;
         }
     }
+
+    .sport:hover {
+        background-color: #FFF;
+        color:  #1e293e;
+    }
 }
