--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -20,6 +20,9 @@
   color: #ffcc00;
   width: 100%;
   height: 42px; }
+  .selection-button:hover {
+    background: #ffcc00;
+    color: #000; }
   .selection-button.selected {
     font-weight: bold;
     border: 2px solid #ff3300; }
@@ -457,6 +460,10 @@
     float: right;
     font-size: 14px; }
 
+.sportsMenu .sport:hover {
+  background-color: #FFF;
+  color: #1e293e; }
+
 .sportsMenu .region {
   font-size: 14px;
   background-color: #2d415c;
@@ -464,6 +471,9 @@
   cursor: pointer;
   color: #FFF;
   line-height: 35px; }
+  .sportsMenu .region:hover {
+    background-color: #FFF;
+    color: #2d415c; }
   .sportsMenu .region .count {
     float: right; }
   .sportsMenu .region .fa-caret-down {
@@ -797,6 +807,8 @@
 
 .markets-button-favorite, .markets-button-statistics {
   font-size: 12px; }
+  .markets-button-favorite:hover, .markets-button-statistics:hover {
+    color: #ff9900; }
   .markets-button-favorite.selected, .markets-button-statistics.selected {
     color: #ffcc00; }
 
@@ -1005,6 +1017,10 @@
   cursor: pointer;
   line-height: 35px;
   height: 35px; }
+
+.sportsMenu-box-highlights-submenu:hover {
+  background-color: #FFF;
+  color: #536883; }
 
 .sportsMenu-box-popular {
   margin-top: 5px; }
