--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -41,6 +41,13 @@
 .bet input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
+
+.item:hover{
+    background: #FFF !important;
+    font-size: 14px !important;
+    color: #000 !important;
+}
+
 .bet .fleft {
   float: left;
 }
