--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -958,6 +958,10 @@
     color: #FFF;
     background-color: #ff3300; }
 
+.sportsMenu-tab:hover {
+  background-color: #497d92;
+  color: #FFF; }
+
 .sportsMenu-interval .header {
   font-size: 18px;
   background-color: #1e293e;
