Design fixes fonts

--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1,7 +1,17 @@
-div,span,strong{ font-family: "Open Sans" !important;}
-
-div, span, strong {
-  font-family: 'Open Sans' !important;
+.fixture{
+  font-family: "Open Sans" !important;
+}
+.item{
+       font-family: "Open Sans" !important;
+}
+.region{
+    font-family: "Open Sans" !important;
+}
+.competition{
+    font-family: "Open Sans" !important;
+}
+.page-footer{
+    font-family: "Open Sans" !important;
 }
 
 .bet {
